--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -192,6 +192,10 @@
         </thead>
         <tbody> 
           <tr>
+            <td>Revamped the front page of the website and added screenshots.</td>
+            <td>13 Jun 2014</td>
+          </tr>
+          <tr>
             <td>Added meeting summaries and nice formatting to agenda/minutes covering emails.</td>
             <td>04 Jun 2014</td>
           </tr>
@@ -237,7 +241,7 @@
         </thead>
         <tbody> 
           <tr>
-            <td>Redesign the eConvenor website (what you see before you log in).</td>
+            <td>Expand the eConvenor website (what you see before you log in).</td>
             <td>Mid June</td>
           </tr>
           <tr>
