--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -256,6 +256,10 @@
             <td>Remove character limit for "notes" text in minutes.</td>
             <td>Mid June</td>
           </tr>
+          <tr>
+            <td>Enable addition of group logo to agendas/minutes.</td>
+            <td>Late June</td>
+          </tr>
         </tbody>
       </table>
     </div>
