Bugfix: Added a missing curly bracket to landing.css

--- a/econvenor/commonstatic/css/landing.css
+++ b/econvenor/commonstatic/css/landing.css
@@ -451,8 +451,8 @@ li p.lead {
 @media (max-width: 1200px) {
 .spacer {
   padding-top: 80px;
+  }
 }
-
 
 /* FOOTER
 -------------------------------------------------- */
