--- a/landing/templates/index.html
+++ b/landing/templates/index.html
@@ -1,49 +1,7 @@
-<!DOCTYPE html>
-
+{% extends "landing_base.html" %}
 {% load staticfiles %}
 
-<html lang="en">
-
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    
-    <link rel="shortcut icon" href="{% static 'images/econvenor-favicon-v1.ico' %}">
-
-    <title>eConvenor - Your virtual convenor</title>
-
-	<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-	<link href="{% static 'css/font-awesome.min.css' %}" rel="stylesheet">
-	<link href="{% static 'css/magnific-popup.css' %}" rel="stylesheet">
-    <link href="{% static 'css/landing.css' %}" rel="stylesheet">
-    
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
-
-  <body>
-  
-    <!-- NAVBAR 
-    ================================================== -->
-
-    <div class="navbar navbar-fixed-top">
-      <div class="container">
-        <span class="navbar-brand">
-          <img src="{% static 'images/econvenor-logo-v1l.png' %}" width="200" height="45" alt="An image of the eConvenor logo">
-        </span>
-        <div class="pull-right">
-          <a href={% url 'qualify' 'step0' %}><button type="button" class="btn btn-primary">Sign up</button></a>
-          <a href={% url 'login' %}><button type="button" class="btn btn-primary">Sign in</button></a>
-
-        </div>
-      </div>
-    </div>
+{% block content %}
 
     <!-- HERO
     ================================================== -->
@@ -235,8 +193,8 @@
     ================================================== -->
     <div class="jumbotron divider red-background">
       <div class="container">
-      	<h1 class="text-center">Built by activists, for activists.</h1>
-      	<h2 class="text-center">eConvenor is a free service to help activist groups everywhere be more effective.</h2>
+        <h1 class="text-center">Built by activists, for activists.</h1>
+        <h2 class="text-center">eConvenor is a free service to help activist groups everywhere be more effective.</h2>
       </div><!-- /.container -->
     </div> <!-- /.jumbotron -->
 
@@ -305,8 +263,8 @@
     ================================================== -->
     <div class="jumbotron divider red-background">
       <div class="container">
-      	<h1 class="text-center">Sometimes the best person for the job is a computer.</h1>
-      	<h2 class="text-center">eConvenor does its work on time, has high standards and never forgets anything.</h2>
+        <h1 class="text-center">Sometimes the best person for the job is a computer.</h1>
+        <h2 class="text-center">eConvenor does its work on time, has high standards and never forgets anything.</h2>
       </div><!-- /.container -->
     </div> <!-- /.jumbotron -->
 
@@ -386,7 +344,7 @@
     <div class="jumbotron divider black-background" id="divider4">
       <div class="container">
         <div class="text-center">
-      	  <h1>Keep your group in the loop with eConvenor.</h1>
+          <h1>Keep your group in the loop with eConvenor.</h1>
           <a href={% url 'qualify' 'step0' %}>
             <button type="button" class="btn btn-primary">
               <i class="fa-fw fa fa-bookmark fa-lg"></i>
@@ -396,58 +354,5 @@
         </div><!-- /.text-center -->
       </div><!-- /.container -->
     </div> <!-- /.jumbotron -->
-  
-    <!-- FOOTER
-    ================================================== -->  
-    <div class="footer">
-      <div class="container">
-        <div class="row">
-          <div class="col-xs-3 col-xs-offset-2">
-            <p class="lead">More information</p>
-            <p><a href={% url 'landing-faqs' %}>Frequent questions</a></p>
-            <p><a href={% url 'landing-terms' %}>Terms and conditions</a></p>
-          </div><!-- /.col -->
-          <div class="col-xs-3">
-            <p class="lead">About eConvenor</p>      
-            <p><a href={% url 'landing-project' %}>The eConvenor project</a></p>
-            <p><a href={% url 'qualify' 'step0' %}>How to contact us</a></p>
-          </div><!-- /.col -->
-          <div class="col-xs-3">
-            <p class="lead">Contribute</p>      
-            <p><a href={% url 'qualify' 'step0' %}>Work on eConvenor</a></p>
-            <p><a href={% url 'qualify' 'step0' %}>Donate money</a></p>
-          </div><!-- /.col -->
-        </div><!-- /.row -->
-      </div>
-    </div>
-     
-    <!-- JavaScript
-    ================================================== -->
-	<script src="{% static 'js/jquery-1.11.0.min.js' %}"></script> 
-	<script src="{% static 'js/bootstrap.min.js' %}"></script>
-	<script src="{% static 'js/jquery.magnific-popup.min.js' %}"></script>
 
-    <script type="text/javascript">
-    var bootstrapButton = $.fn.button.noConflict()
-    $.fn.bootstrapBtn = bootstrapButton 
-    </script>
-
-    <script type="text/javascript">
-      $('.carousel').carousel({
-        interval: 7000
-      });
-    </script>
-
-    <script type="text/javascript">
-      $('.popup-image').magnificPopup({ 
-        type: 'image',
-        image: {
-          cursor: 'mfp-zoom-out-cur',
-        },
-        closeOnContentClick: true,
-      });
-    </script>
-
-  </body>
-</html>
-
+{% endblock content %}
