--- a/econvenor/commonstatic/css/landing.css
+++ b/econvenor/commonstatic/css/landing.css
@@ -188,7 +188,6 @@ body {
   width: 100%;
   background-size: auto 100%;
   background-position: center;
-  height: 350px;
 }
 
 #hero h2 {
@@ -441,6 +440,7 @@ li p.lead {
   border-bottom: 5px solid #ff0066;
 }
 
+
 /* SPACERS
 -------------------------------------------------- */
 
@@ -453,6 +453,7 @@ li p.lead {
   padding-top: 80px;
   }
 }
+
 
 /* FOOTER
 -------------------------------------------------- */
@@ -481,6 +482,8 @@ li p.lead {
   color: #ffffff;
   text-decoration: none;
 }
+
+
 /* LIGHTBOX - MAGNIFIC POPUP
 -------------------------------------------------- */
 
@@ -497,6 +500,41 @@ li p.lead {
 }
 
 
+/* GENERAL PAGES
+-------------------------------------------------- */
+
+.section.general {
+  padding: 30px 0 50px 0;
+}
+
+.general h1 {
+  text-align: left;
+  font-size: 3em;
+  margin: 20px 10px 20px 10px;
+}
+
+.general h2 {
+  text-align: left;
+  font-size: 1.8em;
+  margin: 40px 10px 30px 10px;
+}
+
+.general .fa-ul {
+  padding-left: 20px;
+  padding-top: 0px;
+  margin-left: 0px;
+}
+
+.general .fa-li {
+  padding-left: 1.6em;
+  margin-right: 30px;
+  top: 4px;
+  padding-bottom: 20px;
+}
+
+.general li {
+  padding: 0px 0px 20px 35px;
+}
 /* REGISTRATION PAGES
 -------------------------------------------------- */
 
