Renamed FAQs to Q&A, and removed content which is now on the landing site

--- a/econvenor/templates/app_base.html
+++ b/econvenor/templates/app_base.html
@@ -85,9 +85,9 @@
                   <i class="fa fa-file-text-o fa-fw"></i>&nbsp;
                   User guide</a></li>
                 <li class="divider"></li>
-                <li><a href={% url 'faqs' %}>
+                <li><a href={% url 'qanda' %}>
                   <i class="fa fa-list-alt fa-fw"></i>&nbsp;                  
-                  FAQs</a></li>
+                  Q&A</a></li>
                 <li><a href={% url 'ask-question' %}>
                   <i class="fa fa-question-circle fa-fw"></i>&nbsp;
                   Ask a question</a></li>
@@ -336,7 +336,7 @@
           <span id="tip_area">Dashboard</span>
           <span id="tip_body_1">eConvenor works best when you make your browser window as large as possible.</span>
           <span id="tip_body_2">Click the coloured bar at the top of each <i>Dashboard</i> box to go directly to that section.</span>
-          <span id="tip_body_3">If you're wondering how anything works, look up the <i>User Guide</i> and <i>FAQs</i> under the <i>Help</i> menu.</span>
+          <span id="tip_body_3">If you're wondering how anything works, look up the <i>User Guide</i> and <i>Q&A</i> under the <i>Help</i> menu.</span>
           <span id="tip_body_4">Found a bug? Please let us know so we can fix it. You can report bugs through the <i>Feedback</i> menu.</span>
         {% endifequal %}
         {% ifequal menu.tips 'decisions' %}
