--- a/help/templates/user_guide.html
+++ b/help/templates/user_guide.html
@@ -28,7 +28,7 @@
     </div>
     <div class="panel-body">
       <p>From here on, the user guide is organised by menu item.</p>
-      <p>If you can't find the information you're looking for in this document, try the <i>FAQs</i> which you'll find under the <i>Help</i> menu. If you still can't find your answer there, don't hesitate to drop us an email with your question.</p>
+      <p>If you can't find the information you're looking for in this document, try the <i>Q&A</i> which you'll find under the <i>Help</i> menu. If you still can't find your answer there, don't hesitate to drop us an email with your question.</p>
     </div>
     <div class="panel-heading">
 	  <i class="fa fa-tachometer fa-fw fa-lg"></i>&nbsp;
@@ -138,7 +138,7 @@
       Help
     </div>
     <div class="panel-body">
-      <p>Under this menu item there are links to the Quick-Start Guide, this User Guide, the Frequently Asked Questions (FAQs), and instructions for asking a question about how eConvenor works.</p>
+      <p>Under this menu item there are links to the Quick-Start Guide, this User Guide, the Questions and Answers (Q&A), and instructions for asking a question about how eConvenor works.</p>
     </div>
     <div class="panel-heading">
 	  <i class="fa fa-user fa-fw fa-lg"></i>&nbsp;
