Simplified landing site urls for better SEO

--- a/landing/templates/landing_base.html
+++ b/landing/templates/landing_base.html
@@ -56,18 +56,18 @@
         <div class="row">
           <div class="col-xs-3 col-xs-offset-2">
             <p class="lead">More information</p>
-            <p><a href={% url 'landing-faqs' %}>Frequent questions</a></p>
-            <p><a href={% url 'landing-terms' %}>Terms and conditions</a></p>
+            <p><a href={% url 'faqs' %}>Frequent questions</a></p>
+            <p><a href={% url 'terms' %}>Terms and conditions</a></p>
           </div><!-- /.col -->
           <div class="col-xs-3">
             <p class="lead">About eConvenor</p>      
-            <p><a href={% url 'landing-project' %}>The eConvenor project</a></p>
-            <p><a href={% url 'qualify' 'step0' %}>How to contact us</a></p>
+            <p><a href={% url 'project' %}>The eConvenor project</a></p>
+            <p><a href={% url 'contact' %}>How to contact us</a></p>
           </div><!-- /.col -->
           <div class="col-xs-3">
             <p class="lead">Contribute</p>      
-            <p><a href={% url 'qualify' 'step0' %}>Work on eConvenor</a></p>
-            <p><a href={% url 'qualify' 'step0' %}>Donate money</a></p>
+            <p><a href={% url 'volunteer' %}>Work on eConvenor</a></p>
+            <p><a href={% url 'donate' %}>Donate money</a></p>
           </div><!-- /.col -->
         </div><!-- /.row -->
       </div>
