Added SEO data to each landing site page

--- a/landing/templates/index.html
+++ b/landing/templates/index.html
@@ -1,6 +1,11 @@
 {% extends "landing_base.html" %}
 {% load staticfiles %}
 
+{% block seo %}
+  <title>eConvenor - Your virtual convenor</title>
+  <meta name="description" content="A free virtual convenor for progressive activist groups. Built by activists for activists!">
+{% endblock seo %}
+
 {% block content %}
 
     <!-- HERO
