--- a/landing/templates/landing_base.html
+++ b/landing/templates/landing_base.html
@@ -8,12 +8,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    
-    <link rel="shortcut icon" href="{% static 'images/econvenor-favicon-v1.ico' %}">
 
-    <title>eConvenor - Your virtual convenor</title>
+    {% block seo %}
+    {% endblock seo %}
+        
+    <link rel="shortcut icon" href="{% static 'images/econvenor-favicon-v1.ico' %}">
 
 	<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
 	<link href="{% static 'css/font-awesome.min.css' %}" rel="stylesheet">
@@ -56,7 +55,7 @@
         <div class="row">
           <div class="col-xs-3 col-xs-offset-2">
             <p class="lead">More information</p>
-            <p><a href={% url 'faqs' %}>Frequent questions</a></p>
+            <p><a href={% url 'questions' %}>Common questions</a></p>
             <p><a href={% url 'terms' %}>Terms and conditions</a></p>
           </div><!-- /.col -->
           <div class="col-xs-3">
