--- a/landing/templates/terms.html
+++ b/landing/templates/terms.html
@@ -1,6 +1,11 @@
 {% extends "landing_base.html" %}
 {% load staticfiles %}
 
+{% block seo %}
+  <title>eConvenor - Terms and conditions</title>
+  <meta name="description" content="eConvenor's terms and conditions.">
+{% endblock seo %}
+
 {% block content %}
 
     <!-- PAGE HEADER
