--- a/landing/templates/index.html
+++ b/landing/templates/index.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 
 {% block seo %}
-  <title>eConvenor - Your virtual convenor</title>
+  <title>eConvenor  |  A virtual convenor for activist groups</title>
   <meta name="description" content="A free virtual convenor for progressive activist groups. Built by activists for activists!">
 {% endblock seo %}
 
