--- a/landing/templates/questions.html
+++ b/landing/templates/questions.html
@@ -2,8 +2,8 @@
 {% load staticfiles %}
 
 {% block seo %}
-  <title>eConvenor - Common questions</title>
-  <meta name="description" content="Answers to the most common questions about eConvenor">
+  <title>eConvenor  |  Common questions</title>
+  <meta name="description" content="Answers to the most common questions about eConvenor.">
 {% endblock seo %}
 
 {% block content %}
