--- a/landing/templates/terms.html
+++ b/landing/templates/terms.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 
 {% block seo %}
-  <title>eConvenor - Terms and conditions</title>
+  <title>eConvenor  |  Terms and conditions</title>
   <meta name="description" content="eConvenor's terms and conditions.">
 {% endblock seo %}
 
