--- a/landing/templates/questions.html
+++ b/landing/templates/questions.html
@@ -119,7 +119,7 @@
               <li>
                 <div class="faq-title">
                   <i class="fa fa-li fa-plus-circle fa-lg red"></i>
-                  <p class="lead">Can I do something to help eConvenor with a spare 5 minutes?</p>
+                  <p class="lead">Can I do something to help eConvenor in just 5 minutes?</p>
                 </div>
                 <div class="faq-body">
                   <p class="lead">Yes, by using social media.</p>
