--- a/landing/templates/project.html
+++ b/landing/templates/project.html
@@ -28,7 +28,7 @@
             <p class="lead">The eConvenor project is a volunteer-run and not-for-profit.</p>
             <p>The core of the project are Keira and Sky -- two activists from Melbourne, Australia.</p>
             <p>The service went live in April 2014.</p>
-            <h2 class="red">Joining</h2>
+            <h2 class="red">Join in</h2>
             <p class="lead">eConvenor is an exciting project and it's off to a flying start.</p>
             <p>If you're interested in helping the activist groups of the world be more effective, here's how you can <a href={% url 'volunteer' %}>be part of the project</a>.</p>
           </div><!-- /.col -->
