--- a/landing/templates/landing_base.html
+++ b/landing/templates/landing_base.html
@@ -69,8 +69,8 @@
             <p><a href={% url 'donate' %}>Donate money</a></p>
           </div><!-- /.col -->
         </div><!-- /.row -->
-      </div>
-    </div>
+      </div><!-- /.container -->
+    </div><!-- /.footer -->
      
     <!-- JavaScript
     ================================================== -->
