Added a Source page to the landing site

--- a/landing/templates/landing_base.html
+++ b/landing/templates/landing_base.html
@@ -62,6 +62,7 @@
             <p class="lead">About eConvenor</p>      
             <p><a href={% url 'project' %}>The eConvenor project</a></p>
             <p><a href={% url 'contact' %}>How to contact us</a></p>
+            <p><a href={% url 'source' %}>Source code</a></p>
           </div><!-- /.col -->
           <div class="col-xs-3">
             <p class="lead">Contribute</p>      
