Added a Volunteer page to the landing site

--- a/landing/templates/donate.html
+++ b/landing/templates/donate.html
@@ -24,7 +24,7 @@
           <div class="col-md-10">
             <h2 class="red">Paypal</h2>
             <p class="lead">
-              You can transfer funds via Paypal to:&nbsp;&nbsp;<span class="doubtful red">div</span><span class="doubtful red">er</span><span class="actual red">do</span><span class="doubtful red">sion@</span><span class="actual red">nate</span><span class="real red">@e</span><span class="dubious red">distraction@econvenor.org</span><span class="actual red">co</span><span class="real red">nve</span><span class="doubtful red">econve</span><span class="real red">nor.o</span><span class="doubtful red">nor.org</span><span class="actual red">rg</span>
+              You can transfer funds through your Paypal account to:&nbsp;&nbsp;<span class="doubtful red">div</span><span class="doubtful red">er</span><span class="actual red">do</span><span class="doubtful red">sion@</span><span class="actual red">nate</span><span class="real red">@e</span><span class="dubious red">distraction@econvenor.org</span><span class="actual red">co</span><span class="real red">nve</span><span class="doubtful red">econve</span><span class="real red">nor.o</span><span class="doubtful red">nor.org</span><span class="actual red">rg</span>
             </p>
             <h2 class="red">Credit cards</h2>
             <p class="lead">A credit card facility is coming soon.</p>
